Fix: Corrige configuração de deploy no Railway e remove seção de deploy do README

--- a/.env.railway
+++ b/.env.railway
@@ -1,5 +1,6 @@
 # Arquivo de exemplo para variáveis de ambiente no Railway
 # Copie estas variáveis para o painel do Railway
+# IMPORTANTE: Gere uma nova APP_KEY com: php artisan key:generate --show
 
 APP_NAME="Password Manager"
 APP_ENV=production
@@ -19,6 +20,9 @@ DB_PASSWORD=${{MYSQL_PASSWORD}}
 SESSION_DRIVER=database
 CACHE_DRIVER=database
 QUEUE_CONNECTION=database
+
+# Controle de migrations (defina como 'true' após configurar o banco)
+RUN_MIGRATIONS=false
 
 # Mail (opcional)
 MAIL_MAILER=smtp
