Fix: Melhorias no debug Railway - LOG_CHANNEL stderr + verificações start.sh + Procfile

--- a/railway.toml
+++ b/railway.toml
@@ -7,7 +7,10 @@ startCommand = "chmod +x start.sh && ./start.sh"
 [variables]
 APP_ENV = "production"
 APP_DEBUG = "true"
+LOG_CHANNEL = "stderr"
+LOG_LEVEL = "debug"
 SESSION_DRIVER = "database"
 CACHE_DRIVER = "database"
 QUEUE_CONNECTION = "database"
 RUN_MIGRATIONS = "true"
+DB_CONNECTION = "mysql"
