Fix: Configuração completa do banco MySQL no Railway - variáveis DB_HOST, DB_PORT, etc

--- a/.env.railway
+++ b/.env.railway
@@ -5,7 +5,7 @@
 APP_NAME="Password Manager"
 APP_ENV=production
 APP_KEY=base64:GERE_UMA_NOVA_CHAVE_COM_php_artisan_key_generate
-APP_DEBUG=false
+APP_DEBUG=true
 APP_URL=https://seu-app.up.railway.app
 
 # Banco de dados MySQL (Railway)
@@ -22,7 +22,7 @@ CACHE_DRIVER=database
 QUEUE_CONNECTION=database
 
 # Controle de migrations (defina como 'true' após configurar o banco)
-RUN_MIGRATIONS=false
+RUN_MIGRATIONS=true
 
 # Mail (opcional)
 MAIL_MAILER=smtp
