--- a/railway.toml
+++ b/railway.toml
@@ -14,3 +14,8 @@ CACHE_DRIVER = "database"
 QUEUE_CONNECTION = "database"
 RUN_MIGRATIONS = "true"
 DB_CONNECTION = "mysql"
+DB_HOST = "${{MYSQL_HOST}}"
+DB_PORT = "${{MYSQL_PORT}}"
+DB_DATABASE = "${{MYSQL_DATABASE}}"
+DB_USERNAME = "${{MYSQL_USER}}"
+DB_PASSWORD = "${{MYSQL_PASSWORD}}"
