Fix: Configurações de assets para produção no Railway

--- a/.env.railway
+++ b/.env.railway
@@ -5,8 +5,9 @@
 APP_NAME="Password Manager"
 APP_ENV=production
 APP_KEY=base64:GERE_UMA_NOVA_CHAVE_COM_php_artisan_key_generate
-APP_DEBUG=true
-APP_URL=https://seu-app.up.railway.app
+APP_DEBUG=false
+APP_URL=https://passwordmanager-production.up.railway.app
+ASSET_URL=https://passwordmanager-production.up.railway.app
 
 # Banco de dados MySQL (Railway)
 DB_CONNECTION=mysql
