--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -19,3 +19,6 @@ CACHE_DRIVER = 'database'
 QUEUE_CONNECTION = 'database'
 LOG_CHANNEL = 'stderr'
 LOG_LEVEL = 'debug'
+NODE_ENV = 'production'
+VITE_APP_NAME = 'Password Manager'
+ASSET_URL = ''
