Fix: Correções avançadas para erro 500 - LOG_CHANNEL, permissões e debug

--- a/.env.railway
+++ b/.env.railway
@@ -25,6 +25,10 @@ QUEUE_CONNECTION=database
 # Controle de migrations (defina como 'true' após configurar o banco)
 RUN_MIGRATIONS=true
 
+# Logs
+LOG_CHANNEL=errorlog
+LOG_LEVEL=error
+
 # Mail (opcional)
 MAIL_MAILER=smtp
 MAIL_HOST=mailpit
