--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -17,8 +17,8 @@ APP_DEBUG = 'true'
 SESSION_DRIVER = 'database'
 CACHE_DRIVER = 'database'
 QUEUE_CONNECTION = 'database'
-LOG_CHANNEL = 'stderr'
-LOG_LEVEL = 'debug'
+LOG_CHANNEL = 'errorlog'
+LOG_LEVEL = 'error'
 NODE_ENV = 'production'
 VITE_APP_NAME = 'Password Manager'
 ASSET_URL = ''
