Fix: Nomes do banco em lowercase para compatibilidade com Render

--- a/render.yaml
+++ b/render.yaml
@@ -41,8 +41,8 @@ services:
         value: 120
 
 databases:
-  - name: PasswordManager-db
-    databaseName: PasswordManager
+  - name: passwordmanager-db
+    databaseName: passwordmanager
     user: passwordmanager_user
     plan: free
     region: virginia
