--- a/package.json
+++ b/package.json
@@ -1,6 +1,10 @@
 {
     "private": true,
     "type": "module",
+    "engines": {
+        "node": "18.x",
+        "npm": ">=8.0.0"
+    },
     "scripts": {
         "dev": "vite",
         "build": "vite build"
