--- a/render.yaml
+++ b/render.yaml
@@ -1,44 +1,20 @@
 services:
   - type: web
     name: password-manager
-    env: docker
-    repo: https://github.com/NicholasRMello/PasswordManager
-    branch: main
-    region: virginia
-    plan: free
-    buildCommand: |
-      composer install --no-dev --optimize-autoloader
-      npm install
-      npm run build
-      php artisan config:cache
-      php artisan route:cache
-      php artisan view:cache
-    startCommand: php artisan serve --host=0.0.0.0 --port=$PORT
+    env: php
+    buildCommand: npm install && npm run build && composer install --no-dev --optimize-autoloader
+    startCommand: php artisan config:cache && php artisan route:cache && php artisan view:cache && php artisan serve --host=0.0.0.0 --port=$PORT
     envVars:
-      - key: APP_NAME
-        value: Password Manager
       - key: APP_ENV
         value: production
       - key: APP_DEBUG
         value: false
+      - key: LOG_CHANNEL
+        value: stderr
       - key: APP_KEY
         generateValue: true
-      - key: LOG_CHANNEL
-        value: errorlog
       - key: DB_CONNECTION
         value: pgsql
-      - key: BROADCAST_DRIVER
-        value: log
-      - key: CACHE_DRIVER
-        value: file
-      - key: FILESYSTEM_DISK
-        value: local
-      - key: QUEUE_CONNECTION
-        value: sync
-      - key: SESSION_DRIVER
-        value: file
-      - key: SESSION_LIFETIME
-        value: 120
 
 databases:
   - name: passwordmanager-db
